--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>React sin instalación</title>
-  <!-- Enlaces CDN para React y ReactDOM -->
-  <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
-</head>
-<body>
-  <!-- Contenedor para la aplicación React -->
-  <div id="navigation">
-    <h1>Hola mundo: React</h1>
-  </div>
- 
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Angular sin CLI</title>
+    <script src="https://unpkg.com/@angular/core@14.2.0/bundles/core.umd.min.js"></script>
+    <script src="https://unpkg.com/@angular/common@14.2.0/bundles/common.umd.min.js"></script>
+    <script src="https://unpkg.com/@angular/compiler@14.2.0/bundles/compiler.umd.min.js"></script>
+    <script src="https://unpkg.com/@angular/platform-browser@14.2.0/bundles/platform-browser.umd.min.js"></script>
+    <script src="https://unpkg.com/@angular/platform-browser-dynamic@14.2.0/bundles/platform-browser-dynamic.umd.min.js"></script>
+    
+  </head>
+  <body>
+    <app-root>Hola mundo: Angular!</app-root>
+    <script src="./js/app.js"></script>
+  </body>
 </html>
