--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <!-- Contenedor para la aplicación React -->
   <div id="navigation">
     <h1>Hola mundo: React</h1>
+    <script src="./js/index.js"></script>
   </div>
  
 </body>
