--- a/index.html
+++ b/index.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Angular sin CLI</title>
-    <script src="https://unpkg.com/@angular/core@14.2.0/bundles/core.umd.min.js"></script>
-    <script src="https://unpkg.com/@angular/common@14.2.0/bundles/common.umd.min.js"></script>
-    <script src="https://unpkg.com/@angular/compiler@14.2.0/bundles/compiler.umd.min.js"></script>
-    <script src="https://unpkg.com/@angular/platform-browser@14.2.0/bundles/platform-browser.umd.min.js"></script>
-    <script src="https://unpkg.com/@angular/platform-browser-dynamic@14.2.0/bundles/platform-browser-dynamic.umd.min.js"></script>
-    
-  </head>
-  <body>
-    <app-root>Hola mundo: Angular!</app-root>
-    <script src="./js/app.js"></script>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Formulario con Vue.js</title>
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+</head>
+<body>
+  <div id="myApp">
+    <h1>Formulario</h1>
+    <div>
+      <label for="idNombre">Nombre:</label>
+      <input v-model="nombre" id="idNombre" type="text"/>
+      <label for="idApellido">Apellido:</label>
+      <input v-model="apellido" id="idApellido" type="text"/>
+      <label for="idHobby">Hobby:</label>
+      <input v-model="hobby" id="idHobby" type="text"/>
+      <label for="idLugar">Lugar de Nacimiento:</label>
+      <input v-model="lugar" id="idLugar" type="text"/>
+      <button v-on:click="agregar">Agregar</button>
+    </div>
+    <h2>Entradas</h2>
+    <ul>
+      <li v-for="milist in formulario" >
+        {{ milist }}
+      </li>
+    </ul>
+  </div>
+<script src="./js/app.js"  ></script>
+</body>
 </html>
